tests/snapshots/run_wpt_conformance__onnx_averagePool2d_float16_4D_tensor_options_outputShapeRounding_ceil_and_no_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "averagePool2d.https.any.js",
    "averagePool2d float16 4D tensor options.outputShapeRounding=ceil and no padding",
    "onnx",
    "PASS",
)
