tests/snapshots/run_wpt_conformance__onnx_averagePool2d_float16_4D_tensor_options_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "averagePool2d.https.any.js",
    "averagePool2d float16 4D tensor options.padding",
    "onnx",
    "PASS",
)
